--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,112 +1,4 @@
 {
-  "build_entry_point": "docs",
-  "docsets_to_publish": [
-    {
-      "docset_name": "intune-azure",
-      "build_source_folder": "intune",
-      "build_output_subfolder": "intune",
-      "locale": "hu-hu",
-      "monikers": [],
-      "open_to_public_contributors": false,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content",
-        "LandingData": "Content"
-      },
-      "template_folder": "_themes",
-      "version": 0
-    },
-    {
-      "docset_name": "intune-azure-redir",
-      "build_source_folder": "intune-azure",
-      "build_output_subfolder": "intune-azure-redir",
-      "locale": "hu-hu",
-      "monikers": [],
-      "open_to_public_contributors": false,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "version": 0
-    },
-    {
-      "docset_name": "InTuneDocs",
-      "build_source_folder": "intune-classic",
-      "build_output_subfolder": "intune-classic",
-      "locale": "hu-hu",
-      "monikers": [],
-      "open_to_public_contributors": false,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content",
-        "LandingData": "Content"
-      },
-      "template_folder": "_themes",
-      "version": 0
-    },
-    {
-      "docset_name": "intune-user-help",
-      "build_source_folder": "intune-user-help",
-      "build_output_subfolder": "intune-user-help",
-      "locale": "hu-hu",
-      "monikers": [],
-      "open_to_public_contributors": false,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content",
-        "LandingData": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "version": 0
-    }
-  ],
-  "notification_subscribers": [
-    "CnE_Content_Brno@moravia.com",
-    "CnE_UE_Bugfixing_ENG@moravia.com"
-  ],
-  "branches_to_filter": [
-    "master-oldev",
-    "live-oldev",
-    "live"
-  ],
-  "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/IntuneDocs.hu-hu",
-  "git_repository_branch_open_to_public_contributors": "live",
-  "continue_with_document_error": true,
-  "skip_source_output_uploading": false,
-  "need_preview_pull_request": true,
-  "contribution_branch_mappings": {
-    "live-sxs": "live"
-  },
-  "dependent_repositories": [
-    {
-      "path_to_root": "_themes",
-      "url": "https://github.com/Microsoft/templates.docs.msft.hu-hu",
-      "branch": "master",
-      "branch_mapping": {}
-    },
-    {
-      "path_to_root": "_themes.pdf",
-      "url": "https://github.com/Microsoft/templates.docs.msft.pdf",
-      "branch": "master",
-      "branch_mapping": {}
-    },
-    {
-      "path_to_root": "_repo.en-us",
-      "url": "https://github.com/Microsoft/IntuneDocs-pr",
-      "branch": "live",
-      "branch_mapping": {
-        "live": "live",
-        "master": "master"
-      }
-    }
-  ],
   "branch_target_mapping": {
     "live": [
       "Publish",
@@ -117,12 +9,120 @@
       "Pdf"
     ]
   },
+  "branches_to_filter": [
+    "master-oldev",
+    "live-oldev",
+    "live"
+  ],
+  "build_entry_point": "docs",
+  "continue_with_document_error": true,
+  "contribution_branch_mappings": {
+    "live-sxs": "live"
+  },
+  "dependent_repositories": [
+    {
+      "branch": "master",
+      "branch_mapping": {},
+      "path_to_root": "_themes",
+      "url": "https://github.com/Microsoft/templates.docs.msft.hu-hu"
+    },
+    {
+      "branch": "master",
+      "branch_mapping": {},
+      "path_to_root": "_themes.pdf",
+      "url": "https://github.com/Microsoft/templates.docs.msft.pdf"
+    },
+    {
+      "branch": "live",
+      "branch_mapping": {
+        "live": "live",
+        "master": "master"
+      },
+      "path_to_root": "_repo.en-us",
+      "url": "https://github.com/Microsoft/IntuneDocs-pr"
+    }
+  ],
+  "docsets_to_publish": [
+    {
+      "build_output_subfolder": "intune",
+      "build_source_folder": "intune",
+      "docset_name": "intune-azure",
+      "locale": "hu-hu",
+      "monikers": [],
+      "open_to_public_contributors": false,
+      "template_folder": "_themes",
+      "type_mapping": {
+        "Conceptual": "Content",
+        "LandingData": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "version": 0
+    },
+    {
+      "build_entry_point": "docs",
+      "build_output_subfolder": "intune-azure-redir",
+      "build_source_folder": "intune-azure",
+      "docset_name": "intune-azure-redir",
+      "locale": "hu-hu",
+      "monikers": [],
+      "open_to_public_contributors": false,
+      "template_folder": "_themes",
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "version": 0
+    },
+    {
+      "build_output_subfolder": "intune-classic",
+      "build_source_folder": "intune-classic",
+      "docset_name": "InTuneDocs",
+      "locale": "hu-hu",
+      "monikers": [],
+      "open_to_public_contributors": false,
+      "template_folder": "_themes",
+      "type_mapping": {
+        "Conceptual": "Content",
+        "LandingData": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "version": 0
+    },
+    {
+      "build_entry_point": "docs",
+      "build_output_subfolder": "intune-user-help",
+      "build_source_folder": "intune-user-help",
+      "docset_name": "intune-user-help",
+      "locale": "hu-hu",
+      "monikers": [],
+      "open_to_public_contributors": false,
+      "template_folder": "_themes",
+      "type_mapping": {
+        "Conceptual": "Content",
+        "LandingData": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "version": 0
+    }
+  ],
+  "git_repository_branch_open_to_public_contributors": "live",
+  "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/IntuneDocs.hu-hu",
+  "need_generate_intellisense": false,
+  "need_generate_pdf": false,
   "need_generate_pdf_url_template": true,
+  "need_preview_pull_request": true,
+  "notification_subscribers": [
+    "CnE_Content_Brno@moravia.com",
+    "CnE_UE_Bugfixing_ENG@moravia.com"
+  ],
+  "skip_source_output_uploading": false,
   "targets": {
     "Pdf": {
       "template_folder": "_themes.pdf"
     }
-  },
-  "need_generate_pdf": false,
-  "need_generate_intellisense": false
+  }
 }
