commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -278,18 +278,10 @@ items:
     items:
     - name: Megfelelőség – áttekintés
       href: device-compliance-get-started.md
-    - name: Android-megfelelőség
-      href: compliance-policy-create-android.md
-    - name: Android Enterprise-megfelelőség
-      href: compliance-policy-create-android-for-work.md
-    - name: iOS-megfelelőség
-      href: compliance-policy-create-ios.md
-    - name: Windows-megfelelőség
-      href: compliance-policy-create-windows.md
+    - name: Házirend létrehozása
+      href: create-compliance-policy.md
     - name: Helyalapú megfelelőség
       href: use-network-locations.md
-    - name: Szabályzat értékelése
-      href: policy-evaluate.md
     - name: Meg nem felelés esetén végrehajtandó műveletek
       href: actions-for-noncompliance.md
     - name: Az eszközmegfelelőség figyelése
@@ -298,7 +290,7 @@ items:
     items:
     - name: Eszközök konfigurálása – áttekintés
       href: device-profiles.md
-    - name: Eszközprofilok
+    - name: Profil létrehozása
       href: device-profile-create.md
     - name: Felügyeleti sablonok
       href: administrative-templates-windows.md
@@ -735,7 +727,7 @@ items:
     - name: Windows 10 és újabb
       items:
       - name: A megfelelőségi szabályzat beállításai
-        href: compliance-policy-create-windows.md#windows-10-and-later-policy-settings
+        href: compliance-policy-create-windows.md
       - name: Konfigurációs profil beállításai
         items:
         - name: Kézbesítésoptimalizálás beállításai
@@ -770,20 +762,24 @@ items:
         href: windows-update-settings.md
     - name: Windows Holographic for Business
       items:
-      - name: Eszközkorlátozások
-        href: device-restrictions-windows-holographic.md
-      - name: Többfelhasználós megosztott eszköz
-        href: shared-user-device-settings-windows-holographic.md
-      - name: Kiadásfrissítés és módváltás
-        href: holographic-upgrade.md
-      - name: Kioszkmód
-        href: kiosk-settings-holographic.md
-      - name: Egyéni
-        href: custom-settings-windows-holographic.md
+      - name: A megfelelőségi szabályzat beállításai
+        href: compliance-policy-create-windows.md#windows-holographic-for-business
+      - name: Konfigurációs profil beállításai
+        items:
+        - name: Eszközkorlátozások
+          href: device-restrictions-windows-holographic.md
+        - name: Többfelhasználós megosztott eszköz
+          href: shared-user-device-settings-windows-holographic.md
+        - name: Kiadásfrissítés és módváltás
+          href: holographic-upgrade.md
+        - name: Kioszkmód
+          href: kiosk-settings-holographic.md
+        - name: Egyéni
+          href: custom-settings-windows-holographic.md
     - name: Windows 8.1
       items:
       - name: A megfelelőségi szabályzat beállításai
-        href: compliance-policy-create-windows.md#windows-81-devices-policy-settings
+        href: compliance-policy-create-windows-8-1.md
       - name: Konfigurációs profil beállításai
         items:
         - name: Eszközkorlátozások
@@ -795,7 +791,7 @@ items:
     - name: Windows Phone 8.1
       items:
       - name: A megfelelőségi szabályzat beállításai
-        href: compliance-policy-create-windows.md#windows-81-devices-policy-settings
+        href: compliance-policy-create-windows-8-1.md
       - name: Konfigurációs profil beállításai
         items:
         - name: Eszközkorlátozások
@@ -949,9 +945,9 @@ items:
       href: data-outside-protect.md
     - name: Adatszivárgás megakadályozása nem felügyelt eszközökön
       href: data-leak-prevention.md
-ms.openlocfilehash: eae3f1d1507f7bdfe18855aa568edeac3d211230
-ms.sourcegitcommit: 699427f36dbf31dc7921fb75da647b736eafd79b
+ms.openlocfilehash: e120e5432fe68f479cc19fed5ea2263e7824245c
+ms.sourcegitcommit: 02803863eba37ecf3d8823a7f1cd7c4f8e3bb42c
 ms.translationtype: HT
 ms.contentlocale: hu-HU
-ms.lasthandoff: 04/03/2019
-ms.locfileid: "58899180"
+ms.lasthandoff: 04/09/2019
+ms.locfileid: "59423839"
