--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -552,6 +552,8 @@
               href: app-configuration-policies-use-ios.md
             - name: Android felügyelt eszközök
               href: app-configuration-policies-use-android.md
+            - name: Managed Home Screen alkalmazás Android Enterprise-hoz
+              href: app-configuration-managed-home-screen-app.md
             - name: Felügyelt alkalmazások
               href: app-configuration-policies-managed-app.md
             - name: iOS-alkalmazáskiépítési profilok használata
