commit translated contents

--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -442,11 +442,16 @@
                       items:
                         - name: A Sophos Mobile és az Intune integrációja
                           href: sophos-mtd-connector-integration.md
-            - name: Windows Defender ATP
-              href: advanced-threat-protection.md
-            - name: Biztonsági alapkonfigurációk
-              href: security-baselines.md
+            - name: Microsoft Defender
               items:
+                - name: Microsoft Defender ATP
+                  href: advanced-threat-protection.md
+                - name: Biztonsági tevékenységek
+                  href: atp-manage-vulnerabilities.md
+            - name: Biztonsági alapkonfigurációk
+              items:
+                - name: Biztonsági alapkonfigurációk
+                  href: security-baselines.md
                 - name: Az alapkonfigurációk monitorozása
                   href: security-baselines-monitor.md
             - name: Endpoint Protection
@@ -552,7 +557,7 @@
               href: app-configuration-policies-use-ios.md
             - name: Android felügyelt eszközök
               href: app-configuration-policies-use-android.md
-            - name: Managed Home Screen alkalmazás Android Enterprise-hoz
+            - name: A felügyelt kezdőképernyő konfigurálása
               href: app-configuration-managed-home-screen-app.md
             - name: Felügyelt alkalmazások
               href: app-configuration-policies-managed-app.md
@@ -770,8 +775,12 @@
                   href: shared-user-device-settings-windows.md
                 - name: Egyéni
                   href: custom-settings-windows-10.md
-            - name: Biztonsági alapkonfiguráció beállításai
-              href: security-baseline-settings-windows.md
+            - name: Biztonsági alapkonfigurációk
+              items:
+                - name: A Windows 10 alapbeállításai
+                  href: security-baseline-settings-windows.md
+                - name: A Microsoft Defender ATP alapbeállításai
+                  href: security-baseline-settings-defender-atp.md
             - name: Windows-frissítési beállítások
               href: windows-update-settings.md
         - name: Windows Holographic for Business
