commit translated contents

--- a/intune/index.yml
+++ b/intune/index.yml
@@ -9,7 +9,7 @@ metadata:
   author: dougeby
   ms.author: dougeby
   manager: dougeby
-  ms.date: 02/25/2019
+  ms.date: 05/30/2019
   ms.topic: landing-page
   ms.devlang: null
   ms.service: microsoft-intune
@@ -79,7 +79,7 @@ sections:
   - title: Videók
     items:
       - type: markdown
-        text: '>[!VIDEO https://www.youtube.com/embed/offk-KH7eIA]'
+        text: '>[!VIDEO https://www.youtube.com/embed/ZncVbETBXnM]'
       - type: paragraph
         text: ' '
       - type: markdown
