--- a/intune/toc.yml
+++ b/intune/toc.yml
@@ -50,6 +50,8 @@
       href: tutorial-use-autopilot-enroll-devices.md
     - name: iOS-eszközök regisztrálása DEP használatával
       href: tutorial-use-device-enrollment-program-enroll-ios.md
+    - name: A Slack konfigurálása az Intune használatára
+      href: tutorial-configure-slack-enterprise-grid.md
 - name: Fogalmak
   items:
     - name: Mi az eszközkezelés?
@@ -662,10 +664,6 @@
               href: troubleshoot-policies-in-microsoft-intune.md
             - name: E-mail profilokkal kapcsolatos problémák és megoldásaik
               href: troubleshoot-email-profiles-in-microsoft-intune.md
-            - name: Szoftverfrissítésekkel kapcsolatos hibák elhárítása
-              href: troubleshoot-software-updates-in-microsoft-intune.md
-            - name: Az Endpoint Protection gyakori problémái
-              href: troubleshoot-endpoint-protection-in-microsoft-intune.md
             - name: A feltételes hozzáférés hibaelhárítása
               href: troubleshoot-conditional-access.md
             - name: Az Exchange-összekötő hibaelhárítása
@@ -968,6 +966,10 @@
               href: manage-license-agreements-for-windows-pc-software-in-microsoft-intune.md
             - name: Szabályzatütközések feloldása
               href: resolve-gpo-and-microsoft-intune-policy-conflicts.md
+            - name: Szoftverfrissítésekkel kapcsolatos hibák elhárítása
+              href: troubleshoot-software-updates-in-microsoft-intune.md
+            - name: Az Endpoint Protection gyakori problémái
+              href: troubleshoot-endpoint-protection-in-microsoft-intune.md
     - name: Forgatókönyvek végrehajtási útmutatói
       items:
         - name: Az Exchange Online védelme
